--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-session": "^1.16.2",
     "http-errors": "~1.6.3",
     "mongoose": "^5.9.21",
+    "node": "^17.7.2",
     "nodemon": "^2.0.15"
   }
 }
